tf/eks/k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app

---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
