tf/eks/k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apideployment
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: hnom/codearena-api:latest
          ports:
            - containerPort: 8000
              name: api

---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: apiservice
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30088
  type: LoadBalancer
