tf/eks/k8s/ui.yaml
# Config for UI deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uideployment
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - name: ui
          image: hnom/codearena-ui:latest
          ports:
            - containerPort: 80
              name: ui
          livenessProbe:
            exec:
              command:
                - /bin/my-script.sh
            initialDelaySeconds: 60
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              scheme: HTTPS
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
          # resources:
          #   limits:
          #     cpu: 500m
          #   requests:
          #     cpu: 200m

---
#Config for UI service
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: uiservice
  annotations:
    external-dns.alpha.kubernetes.io/hostname: eks.ohavron-ocg1.link
spec:
  selector:
    app: ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30084
  type: LoadBalancer
