tf/eks/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: app
  name: ingress-ui
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: "subnet-0b2a2b25e3bda32c0, subnet-0d1e31fc47d6105df"
    # for creating record-set
   # external-dns.alpha.kubernetes.io/hostname: ohavron-ocg1.link/ # give your domain name here
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uiservice
                port:
                  number: 80
